# django-supabase-auth

./: .gitignore  .pylintrc  LICENSE  Makefile  README.rst  pyproject.toml  pytest.ini  run_checks  run_tests  tox.ini
.github/workflows/: build-release.yml  tests.yml
examples/localdb/: pytest.ini
examples/localdb/config/: base_settings.py  settings.py  urls.py
examples/localdb/testapp/: views.py
examples/localdb/testapp/static/: supabase_signin.js
examples/localdb/testapp/templates/: supabase_signin.html
examples/localdb/tests/: conftest.py  test_views.py
examples/onlydb/: pytest.ini
examples/onlydb/config/: base_settings.py  settings.py  urls.py  wsgi.py
examples/onlydb/onlydb/: admin.py  models.py
examples/onlydb/onlydb/migrations/: 0001_initial.py
examples/onlydb/tests/: test_db.py  test_models.py
examples/remotedb/: pytest.ini
examples/remotedb/config/: base_settings.py  settings.py  urls.py
examples/remotedb/templates/: profile.html
examples/remotedb/testapp/: admin.py  models.py  views.py
examples/remotedb/testapp/migrations/: 0001_initial.py
examples/remotedb/tests/: factories.py  test_admin_views.py  test_django_views.py
requirements/: base.in  base.txt  dev.in  dev.txt
supa_auth/: __init__.py  admin.py  apps.py  base.py  client.py  fields.py  hashers.py  models.py  settings.py  signals.py  version.py
supa_auth/migrations/: 0001_initial.py  0002_user_model.py  0003_userpermission_usergroup.py
supa_auth/templates/supa_auth/: supabase_client.html
supa_auth/templatetags/: supa_auth.py
supa_auth/tests/: conftest.py  factories.py  fixtures.py  test_base.py  test_commands.py  test_hashers.py  test_live.py  test_models.py  test_templatetags.py  utils.py
