[build-system]
requires = ["setuptools>=64.0.0",]
build-backend = "setuptools.build_meta"

[project]
name = "django_supabase_auth"
description = "Django Supabase authentication."
dependencies = [
    "django>=5.2.8",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
]
requires-python = ">=3.11"
readme = "README.rst"
authors = [{name = "b3b", email = "ash.b3b@gmail.com"}]
license = {text = "MIT"}
dynamic = ["version"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",    
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://github.com/b3b/django-supabase-auth"
Issues = "https://github.com/b3b/django-supabase-auth/issues"
Source = "https://github.com/b3b/django-supabase-auth"

[project.optional-dependencies]
database = [
  "bcrypt>=4.0",
  "psycopg2-binary", 
]
dev = [
  "black>=25.11.0",
  "environs",
  "factory-boy",  
  "pylint",
  "pylint-django",
  "pytest",
  "pytest-django",
  "pytest-env",
  "pytest-mock",
  "requests",
  "requests-toolbelt",
  "ruff",
  "setuptools",
  "tox",  
  "isort",
]

[tool.setuptools]
license-files = ["LICENSE"]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "supa_auth.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["supa_auth*"]
namespaces = false

[tool.black]
exclude = '''
/(
  \.git
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
markers = [
  "liveproject: mark a test to run against the live Supabase project when the --live-project option is set.",
]

[tool.pylint.main]
fail-under = 10.0
ignore = ["migrations"]
py-version = "3.11"

[tool.pylint."messages control"]
disable = [
  "attribute-defined-outside-init",
  "bad-inline-option",
  "deprecated-pragma",
  "file-ignored",
  "import-outside-toplevel",
  "invalid-name",
  "locally-disabled",
  "missing-function-docstring",
  "missing-module-docstring",
  "protected-access",
  "raw-checker-failed",
  "redefined-outer-name",
  "suppressed-message",
  "too-few-public-methods",
  "unused-argument",
  "unused-wildcard-import",
  "use-symbolic-message-instead",
  "useless-suppression",
  "wildcard-import",
]
enable = ["c-extension-no-member"]
